single cocktail issue with footer on mobile

--- a/frontend/src/pages/SinCocktail.module.css
+++ b/frontend/src/pages/SinCocktail.module.css
@@ -1,6 +1,5 @@
 .wrapper {
     background-color: #fff4e6bd;
-    height: fit-content;
     grid-gap: 10px;
     display: grid;
     grid-template-columns: 1fr;
